# PyGUI

./: README.md
PyGUI/: PyGUI.py  pyproject.toml  readme.md
PyGUI/PyGUI.egg-info/: PKG-INFO  SOURCES.txt
PyGUI/pygui/: builder.py  init.py
